src/test/deca/syntax/invalid/test_synt16.deca
//Resultat:
//      Erreur syntaxique : declaration de la methode invalide
class A { 
boolean (Object o, int a){
}
}
